--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created Burger Restaurant "
+      content="Web site created Body Time "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
